--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "engines": { "node" : ">= 4.6.1" } },
+  "engines": { "node" : ">= 4.6.1" },
   "keywords": [
     "scraping"
   ],
