--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "scavenger",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Web scraping and screenshots",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "engines": { "node" : ">= 4.6.1" },
+  "engines": {
+    "node": ">= 4.6.1"
+  },
   "keywords": [
     "scraping",
     "screenshots",
@@ -45,6 +47,6 @@
   },
   "repository": {
     "type": "git",
-    "url" : "https://github.com/pietrovismara/scavenger.git"
+    "url": "https://github.com/pietrovismara/scavenger.git"
   }
 }
