--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "scavenger",
   "version": "2.0.1",
-  "description": "Web scraping and screenshots",
+  "description": "Command line tool / Node.js package using Nightmarejs to scrape/take screenshots of dynamic and static webpages.",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,7 +14,10 @@
     "scraper",
     "html",
     "dynamic",
-    "static"
+    "static",
+    "json",
+    "extract",
+    "nightmare"
   ],
   "author": "Pietro Vismara",
   "license": "ISC",
@@ -25,6 +28,7 @@
   "dependencies": {
     "babel-runtime": "^6.18.0",
     "bluebird": "^3.4.6",
+    "cheerio": "^0.22.0",
     "debug": "^2.3.0",
     "html-minifier": "^3.1.1",
     "jimp": "^0.2.27",
